--- a/Capacitance/Capacitance.html
+++ b/Capacitance/Capacitance.html
@@ -348,11 +348,11 @@
     }
 
     .solutionsfalse {
-      display: block;
+      display: none;
     }
 
     .solutionstrue {
-      display: none;
+      display: block;
     }
 
     .inline {
@@ -381,6 +381,11 @@
     .katex-display.fleqn>.katex {
       padding-left: 0em;
       margin: 0em;
+    }
+
+    a:focus-visible {
+      outline: none;
+      background-color: yellow;
     }
 
     @media print {
@@ -770,7 +775,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1><a name="parallel-plates" number="2" class="hanchor" href="#parallel-plates"><span class="hnumber">2</span>&nbsp;<span class="htext">Parallel Plates</span></a></h1>
+        <h1 class="highlighted"><a name="parallel-plates" number="2" class="hanchor" href="#parallel-plates"><span class="hnumber">2</span>&nbsp;<span class="htext">Parallel Plates</span></a></h1>
       </div>
       <div class="block">
         <p padlength="0">An equal and opposite amount of charge is placed on two conducting and parallel plates as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal">A</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.8141em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02691em;">w</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span></span>, is much larger than shown such that the width, <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02691em;">w</span></span></span></span>, is much larger than the separation distance, <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal">d</span></span></span></span>.</p>
