--- a/Capacitance/Capacitance.html
+++ b/Capacitance/Capacitance.html
@@ -1065,24 +1065,24 @@ c-16-25.333-24-45-24-59z"></path>
               <p padlength="0">the charge on the inner surface of the outer conductor is <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8778em;vertical-align:-0.1944em;"></span><span class="mord">+</span><span class="mord mathnormal">Q</span></span></span></span>, and</p>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="136" lf="138">
+          <li markerlength="3" padlength="0" lo="136" lf="140">
             <div class="block">
               <p padlength="0">there is no charge on the outer surface of the outer conductor.</p>
+            </div>
+            <div class="block">
+              <div class="inline-html">
+                <div class="solutionstrue">
+                  <div class="block">
+                    <p padlength="1"><strong type="md">Answer</strong>: Covered in class.</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </li>
         </ol>
       </div>
       <div class="block">
-        <div class="inline-html">
-          <div class="solutionstrue">
-            <div class="block">
-              <p padlength="2"><strong type="md">Answer</strong>: Covered in class.</p>
-            </div>
-          </div>
-          <div class="block">
-            <p padlength="0">Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.</p>
-          </div>
-        </div>
+        <p padlength="0" class="">Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.</p>
       </div>
       <div class="block">
         <div class="inline-html">
@@ -1136,7 +1136,7 @@ c-16-25.333-24-45-24-59z"></path>
               </div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="159" lf="168">
+          <li markerlength="3" padlength="0" lo="160" lf="169">
             <div class="block">
               <p padlength="0">What is the potential difference, <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.22222em;">V</span><span class="mopen">(</span><span class="mord mathnormal">b</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.22222em;">V</span><span class="mopen">(</span><span class="mord mathnormal">a</span><span class="mclose">)</span></span></span></span>? (Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)</p>
             </div>
@@ -1160,7 +1160,7 @@ c-16-25.333-24-45-24-59z"></path>
               </div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="169" lf="176">
+          <li markerlength="3" padlength="0" lo="170" lf="177">
             <div class="block">
               <p padlength="0">Find the capacitance in terms of <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal" style="margin-right:0.03148em;">k</span></span></span></span>, <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">a</span></span></span></span>, and <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal">b</span></span></span></span>.</p>
             </div>
@@ -1181,7 +1181,7 @@ c-16-25.333-24-45-24-59z"></path>
               </div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="177" lf="181">
+          <li markerlength="3" padlength="0" lo="178" lf="182">
             <div class="block">
               <p padlength="0">(Review question) How much work would the electric field do on a charge <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> that is moved from <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">a</span></span></span></span> to <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal">b</span></span></span></span>? What would be the change in <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span>’s electric potential energy?</p>
             </div>
